@startuml
'https://plantuml.com/sequence-diagram

class App44{
    +getdataJSON()
    +productSearch()
    +printResult()
}
class Product {
    +String name
    +Double price
    +int quantity
    +equals()
}
class Products {
    +ArrayList<Product>
    +getList()
}
App44 *-- Products
Products *-- Product
@enduml